added more lessons

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <title>JS Lessons</title>
+    <title>JS lessons</title>
 </head>
 <body id="col">
 
 <!--  manipulating the dom .js -->
 
-<!-- 
+
     <button onclick="changeColor('pink')">I add colour</button>
 
     <p id="words">Some text here</p>
-    <button onclick="displayText()">I change Text</button> -->
+    <button onclick="displayText()">I change Text</button>
 
     <!-- ----------------------- -->
 
@@ -50,22 +50,59 @@ if they are different set the border styles to thin and solid red and set the di
 
 -->
 
+    <p>
+        Check out my squares
+    </p>
 
-
-
+        <button id="btn">ima show da squares</button>
     
+        <div id="div1" class="uno slide"></div>
+
+        <div id="div2" class="dos slide"></div>
+
+        <div id="div3" class="dres slide"></div>
+
+        <button id="button">Slide</button>
+
+        <button id="ani">animate</button>
+
+
+        <!-- Chuck norris quote generator-->
+
+        <span id="number-fact"></span>
 
     <!-- <script src="js/conditions.js"></script> -->
+
     <!-- <script src="js/variables.js"></script> -->
+
     <!-- <script src="js/loops.js"></script> -->
+    
     <!-- <script src="js/functions.js"></script> -->
+
     <!-- <script src="js/objects.js"></script> -->
+
     <!-- <script src="js/club.js"></script> -->
+
     <!-- <script src="js/prototypes.js"></script> -->
+
     <!-- <script src="js/game.js"></script> -->
+
     <!-- <script src="js/constructor-functions.js"></script> -->
+
     <!-- <script src="js/array.js"></script> -->
+
     <!-- <script src="js/manipulating-dom.js"></script> -->
-    <script src="js/forms.js"></script>
+
+    <!-- <script src="js/forms.js"></script> -->
+
+    <!-- <script src="js/cart.js"></script> -->
+
+    <script src="js/api's-&-crud.js"></script>
+
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="js/jquery.js"></script>
 </body>
 </html>
